# macresults

./: .gitignore  Pipfile  README.md  aliases.json  compute_pro_results.py  compute_results.py  fin_to_base_html.py  pax-factors.json  publish_doty.py  publish_doty_raw.py  publish_event.py  publish_results.py  publish_series.py  pyproject.toml
2018/: com-mcas-points-20180715.xls  com-mcas-points-20180715.xlsx  com-mcas-points-20180909.xls  com-mcas-points-20180909.xlsx  cvscc-fin.html  cvscc.csv  cvscc.html  doty.html  mcas-series-conf.json  mcas-series.html  mowog-series-conf.json  mowog-series.html  mowog1-fin.html  mowog1.csv  mowog2-fin.html  mowog2.csv  mowog3-fin.html  mowog3.csv  mowog3.html  mowog4-fin.html  mowog4.csv  mowog4.html  mowog5-fin.html  mowog5.csv  mowog5.html  mowog6-fin.html  mowog6.csv  mowog6.html  mowog7-fin.html  mowog7.csv  mowog7.html  mowog8-fin.html  mowog8.csv  mowog8.html  mowog9-fin.html  mowog9.csv  mowog9.html  scclac-20180805.xlsx
2019/: com-20190714-simplified.xlsx  com-20190714.xlsx  com-20190908.xlsx  cvscc-20190623.xlsx  doty.html  mcas-series-conf.json  mcas-series.html  mowog-series-conf.json  mowog-series.html  mowog1-fin.html  mowog1.csv  mowog1.html  mowog2-fin.html  mowog2.csv  mowog2.html  mowog3-fin.html  mowog3.csv  mowog3.html  mowog4-fin.html  mowog4.csv  mowog4.html  mowog5-fin.html  mowog5.csv  mowog5.html  mowog6-fin.html  mowog6.csv  mowog6.html  mowog7-fin.html  mowog7.csv  mowog7.html  mowog8-fin.html  mowog8.csv  mowog8.html  mowog9-fin.html  mowog9.csv  mowog9.html  scclac-20190929.xlsx
2020/: doty.html  (+38 more)
(+289 files in other folders)
